objects/FirmApprovalPieces__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedAtFirmDate__c</fullName>
        <label>Approved at Firm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firm_Literature__c</fullName>
        <label>Firm Literature</label>
        <referenceTo>FirmApprovals__c</referenceTo>
        <relationshipName>Firm_Filing_Literature</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <label>Firm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citi</fullName>
                </value>
                <value>
                    <fullName>Edward Jones</fullName>
                </value>
                <value>
                    <fullName>JP Morgan</fullName>
                </value>
                <value>
                    <fullName>LPL</fullName>
                </value>
                <value>
                    <fullName>Merrill Lynch</fullName>
                </value>
                <value>
                    <fullName>Morgan Stanley</fullName>
                </value>
                <value>
                    <fullName>Northwestern</fullName>
                </value>
                <value>
                    <fullName>UBS</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>AXA</fullName>
                    <isActive>false</isActive>
                    <label>AXA</label>
                </value>
                <value>
                    <fullName>Ameriprise</fullName>
                    <isActive>false</isActive>
                    <label>Ameriprise</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Firm Approval Pieces</label>
    <nameField>
        <label>Approval Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firm Approval Pieces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>